My portfolio website

--- a/templates/about.html
+++ b/templates/about.html
@@ -55,26 +55,26 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : About me</h1>
+            <h1 class="h2">03 : About Erskine</h1>
           </div>
-          
+
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Erskine Matthews</h3>
+                  <p>Erskine Matthews took the informal road to learn how to write code. He went to the school of
+                  tutorials, google search, trial and error. It has not been easy for him to acquire the technical know how when it comes to coding. But then again, learning how to code is not easy for a lot of people.</p>
+                  <h3>Life Long Learning </h3>
+                  <p>Coding languages are always improving, visionaries are always innovating new
+                  concepts and features. So Erskine has come to the clear understanding that learning
+                  is a main and everlasting task of a computer programmer.
+                  <h3>Synthesizing. Copying. Scraping. Creating</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  It has been said by many teachers that in the beginning phase of a coders career synthesizing, and copying existing code will dominate their work. In time originality will arise. This site was built from Flask, Python, Templates and a tutorial.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./static/assets/images/profil2.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
