--- a/templates/works.html
+++ b/templates/works.html
@@ -57,12 +57,12 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>My porfolio spans across various websites, platforms and computer languages. This website is part of my porfolio. Please click on the buttons below to see more.</p>
         </div>
       </div>
 
       <div class="col-md-12">
-     
+
       <div id="myCarousel" class="carousel slide projects-carousel">
         <!-- Carousel items -->
         <div class="carousel-inner">
@@ -75,9 +75,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Visit my WordPress Website</h3>
+                        <p>It is a visually pleasing website with allot of bells and whistles.</p>
+                        <a href="http://www.ErskineMatthews.net/" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -86,8 +86,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                        <h3>Visit my Machine Learning Website</h3>
+                        <p>Experience my skill set with TensorFlow.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -97,12 +97,12 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>This Website</h3>
+                        <p>This website was built with Python, Flask, Mashup Templates, CSV data and Pandas.</p>
+                        <a href="http://erskine7.pythonanywhere.com/" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
-                    
+
                 </div>
                 <!--/row-->
             </div>
@@ -115,9 +115,9 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <h3>This Website</h3>
+                      <p>This website was built with Python, Flask, Templates, CSV data and Pandas.</p>
+                      <a href="http://erskine7.pythonanywhere.com/index.html/" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
