--- a/templates/contact.html
+++ b/templates/contact.html
@@ -92,18 +92,18 @@
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          Unit 7012 32 West Merrick Rd. Freeport, NY 11520
+                          Unit 7012 32 W. Merrick Rd. Freeport, NY 11520
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
+                      <a href="http://www.facebook.com/erskine.matthews" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
+                      <a href="http://www.twitter.com/ErskineMatthews" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
+                      <!-- <a href="http://www.linkedin.com" title="" class="fa-icon">
+                        <i class="fa fa-linkedin"></i> -->
                       </a>
 
                     </div>
@@ -112,7 +112,7 @@
             </div>
 
           </div>
-         
+
        </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
   });
 </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
 <script>
   (function (i, s, o, g, r, a, m) {
